--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.26.0"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "react-router-dom": "^6.26.0",
+    "tailwindcss": "^3.4.7"
   }
 }
